manage-gui/src/pages/Detail.scss
@import "../stylesheets/mixins.scss";
@import "../stylesheets/buttons.scss";
@import "../stylesheets/vars.scss";

.detail-metadata {
    @include page;

    section.top-detail {
        margin: 15px 0 10px 0;
        display: flex;
        align-items: center;

        section.info {
            font-size: 18px;
            font-weight: bold;
            color: $blue;
        }
        a.delete-metadata {
            margin-left: auto;
        }
    }


    section.tabs {
        display: flex;
        padding: 10px 0 0 0;
        span {
            flex-grow: 1;
            text-align: center;
            cursor: pointer;
            padding: 15px;
            background-color: $light-grey;
            color: $dark-grey;
            text-transform: uppercase;
            border-right: 1px solid white;

            &.active {
                background-color: white;
                color: $darker-blue;
                border-top: 2px solid $blue;
                border-right: none;
                &.errors {
                    border-top: 2px solid $red;
                }
            }
            &.errors {
                color: $red;
            }
            &:last-child {
                border-right: none;
            }
            i.fa-warning, i.fa-asterisk {
                float: right;
            }
        }
    }

    .actions {
        display: flex;
        margin-top: 25px;
        .notes-container {
            flex-grow: 2;
        }
        .notes {
            display: flex;
            align-items: center;
        }
        label {
            margin-right: 10px;
        }
        input[type=text]{
            width: 75%;
            border: 1px solid $lighter-grey;
            padding: 6px;
            border-radius: $br;
            font-size: 14px;
            &[disabled] {
                background-color: $light-grey;
            }
        }
        .buttons {
            margin-left:auto;
        }
        em.error {
            display: inline-block;
            margin-top: 10px;
            color: $red;
        }
    }

}

